--- a/weather_info_yb2503/pyproject.toml
+++ b/weather_info_yb2503/pyproject.toml
@@ -5,6 +5,8 @@ description = "weather_info_yb2503 will provide convenient weather infomation pr
 authors = ["Yunxin Bo"]
 license = "MIT"
 readme = "README.md"
+ homepage = "https://github.com/QMSS-G5072-2021/yb2503"
+ repository = "https://github.com/QMSS-G5072-2021/yb2503"
 
 [tool.poetry.dependencies]
 python = "^3.8"
